feat: report by user id
